# ntu-msds-sd6106

./: .gitignore  README.md  convert_hf_to_gguf.sh  pyproject.toml  requirements.txt
notebooks/: evaluation_metrics.ipynb  finetuning_causallm.ipynb  finetuning_flowertune_llm.ipynb  finetuning_seq2seq.ipynb  fuse_models.ipynb  project.csv  test.csv  test.ipynb  wandb.ipynb
src/: settings.py
src/evaluation/: README.md  evaluate_metrics.py  evaluation.py
src/flowertune_llm/: client_app.py  dataset.py  models.py  server_app.py
src/generate/: generate_predictions.py
src/huggingface_api/: upload_to_hf.py
src/train/: callbacks.py  finetune_causallm.py  finetune_helpers.py  finetune_llm_mps.py  finetune_seq2seq.py  formatting_prompts_func_helpers.py
src/utility/: dataset.py  logging.py
